[package]
name = "rvscw"
version = "0.1.0"
edition = "2022"

[[bin]]
name = "rvscw"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
clap = { version = "4.0.26", features = ["derive"] }
json = "0.12.4"
uuid = { version = "1.2.2", features = ["v4"] }
